--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,9 +1,9 @@
 name: Elixir CI
 on:
   push:
-    branches: ["develop"]
+    branches: ["main"]
   pull_request:
-    branches: ["develop"]
+    branches: ["main"]
 permissions:
   contents: read
 jobs:
